--- a/index.html
+++ b/index.html
@@ -64,9 +64,7 @@
         </td>
 
         <td>
-          <a
-            target="_blank"
-            href="https://pirtpal-singh.github.io/color-brightness/"
+          <a target="_blank" href="https://pirtpal-singh.github.io/calc-mod/"
             ><img
               src="img/average-GPA-college-vs-high-school-001.png"
               alt="Color Brightness"
